# automato

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
src/: lib.rs  main.rs
tests/: integration_test.rs
