[package]
name = "statemachine"
version = "0.1.0"
authors = ["Umran Hussein <umran.hussein@gmail.com>"]
edition = "2018"
description = "A macro to generate statically checked state machines"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"