[package]
name = "automato"
version = "0.5.0"
authors = ["Umran Hussein <umran.hussein@gmail.com>"]
edition = "2018"
description = "a crate to generate state machines enforced at compile time"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"