[package]
name = "automato"
version = "18.0.0"
authors = ["Umran Hussein <umran.hussein@gmail.com>"]
edition = "2018"
description = "a crate to generate state machines enforced at compile time"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
convert_case = "0.4.0"

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
async-trait = "0.1.50"